--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -2,10 +2,11 @@ cmake_minimum_required(VERSION 3.30.4)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-project(UnicodeStream) #Имя проекта
+project(UnicodeStream) 
 set(CMAKE_BUILD_TYPE Debug)
-add_executable(UnicodeStream #Имя проекта
-# Исходные файлы
+add_executable(UnicodeStream 
+# Add source file
 Source/main.cpp)
-# Подключение .h
+# Add .h file
 target_include_directories(UnicodeStream PRIVATE "${CMAKE_SOURCE_DIR}/Source/Include")
+target_include_directories(UnicodeStream PRIVATE "${CMAKE_SOURCE_DIR}/Source/Include/Lib/fmt") # For FMT
