--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -1,11 +1,33 @@
-cmake_minimum_required(VERSION 3.30.4)
+cmake_minimum_required(VERSION 3.10)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(UnicodeStream) 
-set(CMAKE_BUILD_TYPE Debug)
-add_executable(UnicodeStream 
-# Add source file
-Source/expemple.cpp)
-# Add .h file
-target_include_directories(UnicodeStream PRIVATE "${CMAKE_SOURCE_DIR}/Source/UnicodeStream/")
+
+add_library(UnicodeStream SHARED
+    Source/UnicodeStream/dummy.cpp
+)
+
+target_include_directories(UnicodeStream PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/Source/UnicodeStream
+    ${CMAKE_CURRENT_SOURCE_DIR}/Source/UnicodeStream/Lib/utf8cpp
+)
+
+install(TARGETS UnicodeStream
+    EXPORT UnicodeStreamTargets
+    LIBRARY DESTINATION lib
+    ARCHIVE DESTINATION lib
+    RUNTIME DESTINATION bin
+    INCLUDES DESTINATION include
+)
+
+install(DIRECTORY Source/UnicodeStream/
+    DESTINATION include
+    FILES_MATCHING PATTERN "*.h"
+)
+
+install(EXPORT UnicodeStreamTargets
+    FILE UnicodeStreamConfig.cmake
+    NAMESPACE UnicodeStream::
+    DESTINATION lib/cmake/UnicodeStream
+)
