--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -4,12 +4,16 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(UnicodeStream) 
 
-set_target_properties(UnicodeStream PROPERTIES PREFIX "")
+if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+    set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/UnicodeStreamLib" CACHE PATH "Install path" FORCE)
+endif()
 
 
 add_library(UnicodeStream SHARED
     Source/UnicodeStream/dummy.cpp
 )
+
+set_target_properties(UnicodeStream PROPERTIES PREFIX " ")
 
 target_include_directories(UnicodeStream PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/Source/UnicodeStream
