Major update: Added support for rgb colors for text coloring and back ground, made a simple utf8cpp wrapper for quick use

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,5 +64,6 @@
         "sstream": "cpp",
         "stop_token": "cpp",
         "thread": "cpp"
-    }
+    },
+    "C_Cpp.default.compilerPath": "C:/CPP/mingw64/bin/clang++.exe"
 }
